--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,4 +1,11 @@
 <h1>{{ question.subject }}</h1>
 <div>
-    {{ question.context }}
+    {{ question.content }}
 </div>
+
+<form action="{% url 'pybo:answer_create' question.id %}" method="post">
+    {% csrf_token %}
+    <textarea name="content" id="content" rows="15"></textarea>
+    <input type="sumit" value="답변등록">
+</form>
+
