--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,9 +1,39 @@
-{% if question_list %}
-    <ul>
-    {% for question in question_list %}
-        <li><a href="{% url 'pybo:detail' question.id%}>{{question.subject}}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>질문이 없습니다.</p>
-{% endif %}
+{%extends 'base.html' %}
+{%block content %}
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>-->
+<div class="container my-3">
+    <table class="table">
+        <thead>
+        <tr class="table-dark">
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+
+        </thead>
+        <tbody>
+        {% if question_list %}
+        {% for question in question_list %}
+        <tr>
+            <td>{{ forloop.counter}}</td>
+            <td>
+                <a href=""{% url 'pybo:detail' question.id %}">{{question.subject}}</a>
+            </td>
+            <td>
+                {{question.create_date}}
+            </td>
+        </tr>
+        {% endfor %}
+        {% else %}
+        <tr>
+            <td colspan="3">질문이 없습니다</td>
+        </tr>
+        {% endif %}
+        </tbody>
+
+        <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문등록하기</a>
+</div>
+{% endblock %}
+
+
+
