--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -17,7 +17,7 @@
         <tr>
             <td>{{ forloop.counter}}</td>
             <td>
-                <a href=""{% url 'pybo:detail' question.id %}">{{question.subject}}</a>
+                <a href="" {% url 'pybo:detail' question.id %}">{{question.subject}}</a>
             </td>
             <td>
                 {{question.create_date}}
@@ -31,8 +31,10 @@
         {% endif %}
         </tbody>
 
-        <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문등록하기</a>
+    </table>
+    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
+
 {% endblock %}
 
 
