--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -31,11 +31,36 @@
     <!-- 답변 등록 -->
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
         {% csrf_token %}
-        <div class="mb-3">
-            <label for="content" class="form-label">답변내용</label>
+<!--        오류표시 start-->
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            {% for field in form %}
+            {% if field.errors %}
+            <div>
+                <strong>{{field.label}}</strong>
+                {{field.errors}}
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+        {% endif %}
+<!--        오류표시 end-->
+        <div class="form-group">
             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input type="submit" value="답변등록" class="btn btn-primary">
+
+
+<!--        <div class="mb-3">-->
+<!--            <label for="content" class="form-label">답변내용</label>-->
+<!--            <textarea name="content" id="content" class="form-control" rows="10"></textarea>-->
+<!--        </div>-->
+        <input type="submit" value="답변등록" class="btn btn-primary my-3">
     </form>
 </div>
 {% endblock %}
+
+
+<div class="mb-3">
+            <label for="subject" class="form-label">제목</label>
+            <input type="text" class="form-control" name="subject" id="subject" value="{{form.subject.value|default_if_none:''}}">
+        </div>
