--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -46,21 +46,11 @@
         {% endif %}
 <!--        오류표시 end-->
         <div class="form-group">
+            <label for="content" class="form-label">답변내용</label>
             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-
-
-<!--        <div class="mb-3">-->
-<!--            <label for="content" class="form-label">답변내용</label>-->
-<!--            <textarea name="content" id="content" class="form-control" rows="10"></textarea>-->
-<!--        </div>-->
         <input type="submit" value="답변등록" class="btn btn-primary my-3">
     </form>
 </div>
 {% endblock %}
 
-
-<div class="mb-3">
-            <label for="subject" class="form-label">제목</label>
-            <input type="text" class="form-control" name="subject" id="subject" value="{{form.subject.value|default_if_none:''}}">
-        </div>
